--- a/style.css
+++ b/style.css
@@ -5,20 +5,39 @@
 body{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    gap: 50px;
     height: 100vh;
     width: 100vw;
     background-color: #282a35;
 }
 .divcontainer {
     /* min-width: 1000px; */
+    align-self: center;
     display: flex;
     flex-wrap: wrap;
+    min-width : 700px;
   }
   
   .divcontainer > div{
    flex: 0 1 6.25%;
    height: 25px;
    border: 1px solid red;
+  }
+
+  button{
+      height: wrap;
+      width: wrap;
+      align-self: center;
+      padding: 20px;
+      border-radius: 25px;
+      background-color: rgb(139, 115, 84);
+      border: 3px solid black;
+  }
+
+  header{
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    color: turquoise
   }
