--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body{
     align-self: center;
     display: flex;
     flex-wrap: wrap;
-    min-width : 700px;
+    max-width : 700px;
+    max-height: 400px;
   }
   
   .divcontainer > div{
