--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body{
     align-self: center;
     display: flex;
     flex-wrap: wrap;
-    max-width : 700px;
-    max-height: 400px;
+    width : 700px;
+    height: 400px;
   }
   
   .divcontainer > div{
